# cpy

./: .coverage  .gitignore  Dockerfile  docker-compose.yml  go.mod  pyproject.toml  pytest.ini  report.html  requirements.txt
.github/workflows/: deploy.yml  test.yml
go/: config.yaml  cpy  go.mod  go.sum  main.go  user_vars.gob
go/cmd/: delete.go  get.go  root.go  set.go
go/commands/: command.go  command_table.go  commands_test.go  replace_commands.go
go/config/: config.go
go/copy/: handle_copy.go
go/cpy/: cpy.go
go/dev/: debug.go
go/read_files/: file_util.go  get_files.go  get_tree.go  handle_path.go
go/vars/: repository.go  use_vars.go  user_vars.go
src/cpy/: cmd_parser.py  command.py  cpy.py  get_file_tree.py  get_files.py  parse_content.py  user_vars.py
src/cpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/user_vars/: get_args.py  manage_vars.py  repository.py  use_vars.py
tests/: conftest.py
tests/integration/file_setup/: file_setup.py  file_structures.yaml
tests/integration/run_tests/: cleanup.py  file_structures.yaml  setup.py  test_cli_integration.py
tests/integration/test_cases/: filepath_error.yaml  filepath_valid.yaml  user_variable_error.yaml  user_variable_valid.yaml
tests/integration/tests/: dbm_setup.py  test_cases.yaml  test_cli_integration.py
tests/unit/: test_get_files.py  test_parse_content.py  test_user_vars.py
