[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpy"
version = "1.0.0"
description = "CLI tool for copying dynamic content to clipboard"
authors = [
  { name = "Alex Buckley", email = "alexmeb81@outlook.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = [
  "pyperclip==1.9.0",
  "treelib==1.8.0"
]
urls = { Homepage = "https://github.com/Ameb8/cpy" }

[project.scripts]
cpy = "cpy.cpy:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
